changes in home page look and feel

--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -4,12 +4,12 @@
   grid-template-columns: 50% 50%;
   grid-template-rows: 50% 50%;
   justify-content: center;
-  max-width: 500px;
+  max-width: 80vw;
   margin: 0 auto;
 }
 
 .HomePageSection {
-  min-height: 100px;
+  min-height: 30vh;
   text-align: center;
   font-size: 1rem;
   background-color: cyan;
@@ -23,6 +23,9 @@
   background-color: var(--dark-accent-color);
   color: var(--primary-background-color);
   font-weight: bold;
+
+  font-size: 2rem;
+  text-decoration: none;
 }
 .HomePageSection.BlogSection {
   grid-column: 1 / span 1;
